--- a/ARCHIVE/standard_vm/environments/development/common.yaml
+++ b/ARCHIVE/standard_vm/environments/development/common.yaml
@@ -1,4 +1,5 @@
-# ---
+# development common.yaml
+---
 # executables path
 generic::execpath: "/usr/local/bin/:/bin/:/usr/bin/:"
 #
@@ -64,7 +65,7 @@ composer::run_install: "no"
 composer::run_update:  "no"
 #
 # --------------
-# composer
+# symfony
 # --------------
 # if bindir is something fancy, you might need to care about PATH env variable
 symfony::bindir:         "/usr/local/bin"
