--- a/ARCHIVE/current/vmconfig/Vagrantfile
+++ b/ARCHIVE/current/vmconfig/Vagrantfile
@@ -7,6 +7,7 @@ VAGRANT_BASEBOX         = "HR_BASEBOX_2015"
 VBOX_NAME               = "HR_JSGAMES_2015"
 VBOX_HOSTNAME           = "thebox"
 VBOX_PROJECT_DIR        = "/var/www/theproject"
+VBOX_SYNC_FOLDER        = "../../../../jsgames/"
 
 # guest ip adress
 VBOX_IP = "192.168.10.10"
@@ -82,7 +83,7 @@ Vagrant.configure( VAGRANTFILE_API_VERSION ) do |config|
   #---------------------------------------------------------
   # path to folder on the host that's synced to the guest
   #---------------------------------------------------------
-  config.vm.synced_folder "../../jsgames/", VBOX_PROJECT_DIR,
+  config.vm.synced_folder VBOX_SYNC_FOLDER, VBOX_PROJECT_DIR,
                              owner: "vagrant", group: "www-data",
                              mount_options: ["dmode=777,fmode=777"]
 
