--- a/ARCHIVE/current/composer.json
+++ b/ARCHIVE/current/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "HR jsgames",
+  "name": "HR playground 2015",
   "type": "project",
   "description": "testing frontend stuff",
   "autoload": {
